Fix: Code blocks too big on small screens

--- a/src/index.scss
+++ b/src/index.scss
@@ -547,9 +547,6 @@ footer {
 		}
 	}
 	@media screen and (max-width: 600px) {
-		pre {
-			width: 100%;
-		}
 		p {
 			text-align: justify;
 		}
